--- a/content/_drafts/thoughts.html
+++ b/content/_drafts/thoughts.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+	<a href="#main" id="top" class="visually-hidden skiptomain">Skip to main content</a>
 	<div class="page">
 		<header class="page__header grid">
 			<a href="https://fri11s.neocities.org/" class="page__logo">
@@ -112,6 +113,7 @@
 		});
 		e = d.replace(/\s/g, ""), time.innerHTML = e;
 	</script>
+	<script data-goatcounter="https://frills-thoughts.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
 </html>
